<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addQuestion">Add Question</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="sortBy">Sort By</string>
    <string name="sort">Sort</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchtab_questions">Questions</string>
    <string name="searchtab_answers">Answers</string>
    <string name="title_activity_author_question">Submit a Question</string>
    <string name="titletext">Title:</string>
    <string name="titlebodytext">Question Body:</string>
    <string name="entertitletext">Enter a title</string>
    <string name="enterbodytext">Write your description here</string>
    <string name="addPictureButton">Select Picture</string>
    <string name="submitQuestionButton">Submit Question</string>
    <string name="submitAnswerButton">Submit Answer</string>
    <string name="title_activity_author_answer">Submit an Answer</string>
    <string name="title_activity_question_answer">Questions Answers:</string>
    <string name="arrangeby">Arrange By</string>
    <string name="filterby">Filter By</string>
    <string name="date">Date</string>
    <string name="upvote">Upvote</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="answer">Answer</string>
    <string name="title_activity_user_pref">Settings</string>

</resources>
