<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brogrammers.agora.AuthorQuestionActivity" >

    <TextView
        android:id="@+id/authorQuestionTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/titletext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/authorQuestionTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/authorQuestionTitleTextView"
        android:ems="10"
        android:text="@string/entertitletext" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/authorAnswerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/authorQuestionTitleEditText"
        android:layout_marginTop="20dp"
        android:text="@string/titlebodytext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/authorAnswerBodyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authorAnswerAddPictureButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/authorAnswerTextView"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/enterbodytext" />

    <Button
        android:id="@+id/authorAnswerAddPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/authorAnswerAddPictureButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submitQuestionButton" />

    <Button
        android:id="@+id/authorAnswerAddPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authorAnswerAddPostButton"
        android:layout_alignLeft="@+id/authorAnswerBodyEditText"
        android:layout_alignParentRight="true"
        android:text="@string/addPictureButton" />

</RelativeLayout>
