<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brogrammers.agora.views.AuthorAnswerActivity" >

    <TextView
        android:id="@+id/authorAnswerBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/authorAnswerAddAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/submitAnswerButton" />

    <Button
        android:id="@+id/authorAnswerAddPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authorAnswerAddAnswerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/addPictureButton" />

    <EditText
        android:id="@+id/authorAnswerBodyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authorAnswerAddPictureButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/authorAnswerBodyTextView"
        android:ems="10"
        android:gravity="top|left"
        android:hint="Enter Answer Here."
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
