<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="14dp"
    android:orientation="vertical" >
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="10dp"
	    android:background="@android:color/white"/>

    <TextView
        android:id="@+id/sortbyTextDialoug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortBy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="282dp"
        android:layout_height="61dp" >
    </ListView>
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>

	<TextView
	    android:id="@+id/arrangebyTextDialoug"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/arrangeby"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="60dp" >
    </ListView>
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
	
    <TextView
        android:id="@+id/filterbyTextDialoug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterby"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView3"
        android:layout_width="match_parent"
        android:layout_height="59dp" >
    </ListView>
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:text="Button" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.13"
            android:text="Button" />
    </LinearLayout>

</LinearLayout>